# smart_assistant

./: .env  README.md  main.py  pyproject.toml  run.py  test.html
alembic/: env.py
alembic/versions/: 14ec583828eb_fix_fk.py  2411d6999ad3_add_conversations.py  3d261a9f0dab_init.py  506b2f09fdca_add_index_to_conversation_id.py  53ed27fde306_add_created_at.py  5c3ba4dc59ee_update_conversations_and_chat_messages.py  ee7f036ebcac_remove_order_by.py
domain/exceptions/: domain_exception.py  forbidden_exception.py  not_found_exception.py  unauthenticated_exception.py  user_already_exists_exception.py
domain/models/: chat_message.py  chat_role.py  conversation.py  user.py  user_tokens.py
domain/services/: user_service.py
domain/usecases/create_user/: create_user_request.py  create_user_usecase.py
domain/usecases/find_user_by_id/: find_user_by_id_usecase.py
domain/usecases/get_conversation_messages/: get_converation_messages_usecase.py  get_conversation_messages_response.py
domain/usecases/get_user_conversations/: get_user_conversations_response.py  get_user_conversations_usecase.py
domain/usecases/login/: login_request.py  login_usecase.py
infrastructure/: app_config.py
infrastructure/agents/: conversation_agent.py  html_converter_agent.py  title_agent.py
infrastructure/db/: base.py  database.py
infrastructure/gateways/: chat_gateway.py
infrastructure/repositories/: chat_repository.py  user_repository.py
presentation/controllers/: chat_controller.py  user_controller.py
presentation/web/: package.json  tailwind.config.js
(+70 files in other folders)
